added homework for lesson 37